[ADD] window rule for teams-for-linux

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -210,6 +210,7 @@ windowrule = workspace 2,^(emacs)$
 
 # Teams
 windowrule = workspace 1,^(.*Microsoft Teams.*)$
+windowrule = workspace 1,^(teams-for-linux)$
 
 # Discord
 windowrule = workspace 1,^(discord)$
