[ADD] env var for HYPRCURSOR_SIZE

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -378,6 +378,8 @@ bind = $mainMod CTRL, mouse_down, workspace, -1
 
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
+env = HYPRCURSOR_SIZE,19
+
 env = GDK_BACKEND=wayland,x11
 env = QT_QPA_PLATFORM="wayland;xcb"
 env = XDG_CURRENT_DESKTOP=Hyprland
