[ADD] new animation

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -122,12 +122,21 @@ decoration {
 }
 
 animations {
-    enabled = yes
-    bezier=overshot,0.13,0.99,0.29,1.1
-    animation=border,1,10,default
-    animation=fade,1,10,default
-    animation=windows,1,4,overshot,slide
-    animation=workspaces,1,6,overshot,slide
+  # enabled = yes
+  # bezier=overshot,0.13,0.99,0.29,1.1
+  # animation=border,1,10,default
+  # animation=fade,1,10,default
+  # animation=windows,1,4,overshot,slide
+  # animation=workspaces,1,6,overshot,slide
+
+  bezier    = overshot, 0.13, 0.99, 0.29, 1.1
+  animation = windows, 1, 6, overshot, slide
+  animation = windowsIn, 1, 6, overshot, slide
+  animation = windowsOut, 1, 6, overshot, slide
+  animation = windowsMove, 1, 6, overshot, slide
+  animation = border, 1, 10, default
+  animation = fade, 1, 6, overshot,
+  animation = workspaces, 1, 5, overshot, slide
 }
 
 dwindle {
@@ -235,8 +244,8 @@ windowrule = opacity 0.90 override 0.90 override, .*
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-$term = alacritty
-$term2 = terminator
+$term = kitty
+$term2 = alacritty
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
 $appmenu = ~/.config/hypr/scripts/menu2
