[ADD] keybinding to focus prev/next monitor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -343,6 +343,9 @@ bind = $mainMod, K, bringactivetotop
 bind = $mainMod, J, movefocus, d
 bind = $mainMod, J, bringactivetotop
 
+bind = $mainMod, Comma, focusmonitor, -1
+bind = $mainMod, Semicolon, focusmonitor, +1
+
 bind = $mainMod SHIFT, H, movewindoworgroup, l
 bind = $mainMod SHIFT, L, movewindoworgroup, r
 bind = $mainMod SHIFT, K, movewindoworgroup, u
