[UP] window rule for float term

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -271,7 +271,7 @@ $browser = brave
 
 bind = $mainMod,Return,exec,$term
 bind = $mainMod SHIFT,Return,exec,$term2
-bind = $mainMod CTRL,Return,exec,[float] $term
+bind = $mainMod CTRL,Return,exec,[float; size 50%, 60%] $term
 
 bind = $mainMod, E ,exec,$files
 bind = $mainMod SHIFT, E ,exec,$editor
