--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -268,6 +268,7 @@ $files = dolphin
 $editor = emacsclient -c -n -a 'emacs'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
+$help_keybind = ~/.config/rofi/keybinding.sh
 
 bind = $mainMod,Return,exec,$term
 bind = $mainMod SHIFT,Return,exec,$term2
@@ -285,6 +286,7 @@ bind = $mainMod SHIFT, D, exec,$appmenu2
 bind = $mainMod, X, exec,$powermenu
 bind = $mainMod, W, exec,$wallpapermenu
 bind = $mainMod, T, exec,$thememenu
+bind = $mainMod SHIFT, Comma, exec, $help_keybind
 
 bind = $mainMod, N, exec,nm-connection-editor
 bind = $mainMod, C, exec,$colorpicker
