[ADD] another bind to kill help rofi popup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -286,7 +286,7 @@ bind = $mainMod SHIFT, D, exec,$appmenu2
 bind = $mainMod, X, exec,$powermenu
 bind = $mainMod, W, exec,$wallpapermenu
 bind = $mainMod, T, exec,$thememenu
-bind = $mainMod SHIFT, Comma, exec, $help_keybind
+bind = $mainMod SHIFT, Comma, exec, pkill rofi || $help_keybind
 
 bind = $mainMod, N, exec,nm-connection-editor
 bind = $mainMod, C, exec,$colorpicker
