[UP] script to show keyding without "bind =" + like table thx ','

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -270,9 +270,9 @@ $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
 $help_keybind = ~/.config/rofi/keybinding.sh
 
-bind = $mainMod,Return,exec,$term
-bind = $mainMod SHIFT,Return,exec,$term2
-bind = $mainMod CTRL,Return,exec,[float; size 50%, 60%] $term
+bind = $mainMod, Return, exec, $term
+bind = $mainMod SHIFT, Return, exec,$term2
+bind = $mainMod CTRL, Return, exec, [float; size 50% 60%] $term
 
 bind = $mainMod, E ,exec,$files
 bind = $mainMod SHIFT, E ,exec,$editor
