[ADD] window rule for kitty window titled 'float'

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -183,6 +183,9 @@ windowrulev2 = float,class:^(org.twosheds.iwgtk)$
 windowrulev2 = float,class:^(blueberry.py)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
+windowrulev2 = float,class:^kitty$ title:^(float-.*)$
+windowrulev2 = size 50% 50%,class:^kitty$ title:^(float-.*)$
+
 # Tuple
 windowrule = float,Tuple
 windowrule = workspace 4,Tuple
