--- a/.config/waybar/config_hyprland.json
+++ b/.config/waybar/config_hyprland.json
@@ -78,11 +78,11 @@
   },
 
   "custom/pacman": {
-    "format": "{} 󰢰 ",
+    "format": "󰦗 {}",
     "interval": 3600, // every hour
     "exec": "checkupdates | wc -l", // check for updates
     "exec-if": "exit 0", // always run; consider advanced run conditions
-    "on-click": "checkupdates | wc -l", // update system
+    "on-click": "kitty --config ~/.cache/wal/colors-kitty.conf --title float-system-update --hold --detach yay -Syyu",
     "signal": 8
   },
 
@@ -93,10 +93,10 @@
 
   "clock": {
     "format": "󰃭 {:%e%b  %H:%M}",
-    "format-alt": "{:%Y-%m-%d}",
+    // "format-alt": "{:%Y-%m-%d}",
     "tooltip": true,
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-    //"on-click": "calcurse",
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    "on-click": "kitty --config ~/.cache/wal/colors-kitty.conf --title float-calcurse calcurse"
   },
 
   "cpu": {
