--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -229,6 +229,7 @@ windowrule = workspace 1,^(teams-for-linux)$
 
 # Discord
 windowrule = workspace 1,^(discord)$
+windowrule = workspace 1,^(WebCord)$
 
 # Slack
 windowrule = workspace 1,^(Slack)$
