[UP] get in cache the last wallpaper

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/dotfiles/.config/hypr/wallpapers/mountain-night.jpg
-wallpaper = ,~/dotfiles/.config/hypr/wallpapers/mountain-night.jpg
+preload = ~/.cache/hyprpaper/current-wallpaper
+wallpaper = ,~/.cache/hyprpaper/current-wallpaper # Empty first argument to enable wallpaper on every monitor
