[UP] rename menu2 to appmenu + delete menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -255,8 +255,7 @@ $term = kitty
 $term2 = alacritty
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
-$appmenu = ~/.config/hypr/scripts/menu2
-$appmenu2 = ~/.config/hypr/scripts/menu
+$appmenu = ~/.config/rofi/appmenu.sh
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
@@ -286,7 +285,6 @@ bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
 bind = $mainMod CTRL, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 
 bind = $mainMod, D, exec,$appmenu
-bind = $mainMod SHIFT, D, exec,$appmenu2
 bind = $mainMod, X, exec,$powermenu
 bind = $mainMod, W, exec,$wallpapermenu
 bind = $mainMod, T, exec,$thememenu
