--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -71,7 +71,7 @@ label {
     valign = center
 }
 
-# Profie-Photo
+# Profile-Photo
 image {
     monitor =
     path = ~/.config/hypr/Big_Boss_MG2.png
