[UP] extract clipboardlist script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -256,6 +256,7 @@ $term2 = alacritty
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
 $appmenu = ~/.config/rofi/appmenu.sh
+$clipboardlist = ~/.config/rofi/clipboardlist.sh
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
@@ -397,7 +398,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 bind = $mainMod CTRL, mouse_up, workspace, +1
 bind = $mainMod CTRL, mouse_down, workspace, -1
 
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, $clipboardlist
 
 env = HYPRCURSOR_SIZE,19
 
