[UP] inverse waybar clock icon order

--- a/.config/waybar/config_hyprland.json
+++ b/.config/waybar/config_hyprland.json
@@ -92,7 +92,7 @@
   },
 
   "clock": {
-    "format": "󰃭 {:%e%b  %H:%M}",
+    "format": "{:%e%b 󰃭 %H:%M } ",
     // "format-alt": "{:%Y-%m-%d}",
     "tooltip": true,
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
