[ADD] kitty method to use fzf

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,3 +6,4 @@ bold_italic_font auto
 font_size 11.0
 
 include ~/.cache/wal/colors-kitty.conf
+map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i --tac
