[UP] use zen-browser

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -189,6 +189,7 @@ windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 
 # Browser
 windowrule = workspace 3,brave-browser
+windowrule = workspace 3,zen-alpha
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
