--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,8 +58,8 @@ input {
 source = ~/.cache/wal/colors-hyprland.conf
 
 general {
-    gaps_in = 2
-    gaps_out = 4
+    gaps_in = 4
+    gaps_out = 12
     border_size = 2
     layout = dwindle
     col.active_border = $color4
@@ -70,6 +70,7 @@ general {
 # Make the cursor disappear after 3 seconds
 cursor {
   inactive_timeout = 3
+  enable_hyprcursor = true
 }
 
 group {
@@ -105,24 +106,40 @@ decoration {
 }
 
 animations {
-  # enabled = yes
-  # bezier=overshot,0.13,0.99,0.29,1.1
-  # animation=border,1,10,default
-  # animation=fade,1,10,default
-  # animation=windows,1,4,overshot,slide
-  # animation=workspaces,1,6,overshot,slide
+# enabled = yes
+# bezier=overshot,0.13,0.99,0.29,1.1
+# animation=border,1,10,default
+# animation=fade,1,10,default
+# animation=windows,1,4,overshot,slide
+# animation=workspaces,1,6,overshot,slide
 
-  bezier    = fast     , 0   , 0.99, 0    , 0.99
-  bezier    = smooth   , 0.1 , 0.99, 0.29 , 1.1
-  bezier    = overshot , 0.05,0.9  ,0.1   ,1.1
+bezier = easeOutQuint  ,0.23 ,1    ,0.32  ,1
+bezier = easeInOutCubic,0.65 ,0.05 ,0.36  ,1
+bezier = linear        ,0    ,0    ,1     ,1
+bezier = almostLinear  ,0.5  ,0.5  ,0.75  ,1.0
+bezier = quick         ,0.15 ,0    ,0.1   ,1
 
-  animation = windows    , 1 , 6  , overshot , slide
-  animation = windowsIn  , 1 , 6  , smooth   , slide
-  animation = windowsOut , 1 , 6  , fast     , slide
-  animation = windowsMove, 1 , 6  , overshot , slide
-  animation = border     , 1 , 10 , default
-  animation = fade       , 1 , 6  , overshot ,
-  animation = workspaces , 1 , 5  , overshot , slide
+bezier = fast          , 0   , 0.99, 0    , 0.99
+bezier = smooth        , 0.1 , 0.99, 0.29 , 1.1
+bezier = overshot      , 0.05,0.9  ,0.1   ,1.1
+
+animation = global         , 1 , 10  , default
+animation = border         , 1 , 5.39, easeOutQuint
+animation = windows        , 1 , 4.79, easeOutQuint
+animation = windowsIn      , 1 , 4.1 , easeOutQuint, popin 87%
+animation = windowsOut     , 1 , 1.49, linear      , popin 87%
+animation = fadeIn         , 1 , 1.73, almostLinear
+animation = fadeOut        , 1 , 1.46, almostLinear
+animation = fade           , 1 , 3.03, quick
+animation = layers         , 1 , 3.81, easeOutQuint
+animation = layersIn       , 1 , 4   , easeOutQuint, fade
+animation = layersOut      , 1 , 1.5 , linear      , fade
+animation = fadeLayersIn   , 1 , 1.79, almostLinear
+animation = fadeLayersOut  , 1 , 1.39, almostLinear
+animation = workspaces     , 1 , 5   , overshot    , slide
+# animation = workspaces   , 1 , 1.94, almostLinear, fade
+# animation = workspacesIn , 1 , 1.21, almostLinear, fade
+# animation = workspacesOut, 1 , 1.94, almostLinear, fade
 }
 
 dwindle {
@@ -219,7 +236,8 @@ windowrule = workspace 1,^(WebCord)$
 windowrule = workspace 1,^(Slack)$
 
 # All
-windowrule = opacity 0.90 override 0.90 override, .*
+windowrule = opacity 1 override 0.90 override, .*
+windowrule = opacity 0.90 override 0.90 override, ^(emacs|kitty|Alacritty)$
 
 # List of options
 #windowrule = move 69 420,abc
@@ -231,6 +249,10 @@ windowrule = opacity 0.90 override 0.90 override, .*
 #windowrule = opacity 1.0,abc
 #windowrule = animation slide left,abc
 #windowrule = rounding 10,abc
+
+xwayland {
+    enabled = true
+}
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
