[ADD] hypridle conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,9 +28,8 @@ exec-once = hyprshade auto
 
 exec-once = blueman-applet
 
-exec-once = swayidle -w timeout 240 'brightnessctl --save; brightnessctl set 5%' resume 'brightnessctl --restore' timeout 360 '~/.config/hypr/scripts/sleep' before-sleep 'hyprlock'
+exec-once = hypridle
 
-# exec-once=/usr/lib/polkit-1/polkitd
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = wal -R
