[UP] use emacs_start add gtk scrip call remove xwayland config

--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -1,9 +1,8 @@
 
 # exec-once=~/.config/hypr/scripts/gtkthemes-bkp
 # exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
-# exec-once=emacs_start
 
 exec-once=webcord
-exec-once=emacs_vanilla_start
+exec-once=emacs_start
 exec-once=communication_app_start
 exec-once=zen-browser
