--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,8 +37,9 @@ exec-once = wal -R
 exec-once = nm-applet --indicator
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+
+exec-once = ~/.config/hypr/scripts/gtkthemes-bkp
 
 input {
     kb_layout = fr
