--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -188,6 +188,7 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(org.twosheds.iwgtk)$
 windowrulev2 = float,class:^(blueberry.py)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = float,class:^(org.kde.gwenview)$
 
 windowrulev2 = float,class:^kitty$ title:^(float-.*)$
 windowrulev2 = size 50% 50%,class:^kitty$ title:^(float-.*)$
