[UP] use thunar instead of dolphin

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -205,6 +205,11 @@ windowrule = float,^(org.kde.dolphin)$
 windowrulev2 = size 1280 720,class:^(org.kde.dolphin)$
 windowrulev2 = center, class:^(org.kde.dolphin)$
 
+# Thunar
+windowrule = float,^(thunar)$
+windowrulev2 = size 1280 720,class:^(thunar)$
+windowrulev2 = center, class:^(thunar)$
+
 # Gnome Settings
 windowrule=float,^(org.gnome.Settings)$
 windowrulev2=center,class:^(org.gnome.Settings)$
@@ -246,21 +251,6 @@ windowrule = workspace 1,^(Slack)$
 windowrule = opacity 1 override 0.90 override, .*
 windowrule = opacity 0.90 override 0.90 override, ^(emacs|kitty|Alacritty)$
 
-# List of options
-#windowrule = move 69 420,abc
-#windowrule = size 420 69,abc
-#windowrule = tile,xyz
-#windowrule = pseudo,abc
-#windowrule = monitor 0,xyz
-#windowrule = workspace 12,abc
-#windowrule = opacity 1.0,abc
-#windowrule = animation slide left,abc
-#windowrule = rounding 10,abc
-
-xwayland {
-    enabled = true
-}
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
@@ -281,7 +271,7 @@ $sleep = ~/.config/hypr/scripts/sleep
 $suspend = ~/.config/hypr/scripts/suspend
 $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
-$files = dolphin
+$files = thunar
 $editor = emacsclient -c -n -a 'emacs'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = brave
