[UP] rename var + brightness step to 5

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -263,7 +263,7 @@ $clipboardlist = ~/.config/rofi/clipboardlist.sh
 $menu3 = xfce4-appfinder
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
-$backlight = ~/.config/hypr/scripts/brightness
+$brightness = ~/.config/hypr/scripts/brightness
 $screenshot = ~/.config/hypr/scripts/screenshot
 # $lockscreen = ~/.config/hypr/scripts/lockscreen
 $lockscreen = hyprlock
@@ -301,8 +301,8 @@ bind = CTRL ALT,L, exec, $suspend
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
 
-binde = ,XF86MonBrightnessUp, exec, $backlight --inc
-binde = ,XF86MonBrightnessDown, exec, $backlight --dec
+binde = ,XF86MonBrightnessUp, exec, $brightness --inc
+binde = ,XF86MonBrightnessDown, exec, $brightness --dec
 binde = ,XF86AudioRaiseVolume, exec, $volume --inc
 binde = ,XF86AudioLowerVolume, exec, $volume --dec
 bind = ,XF86AudioMute, exec, $volume --toggle
