--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -112,40 +112,33 @@ decoration {
 }
 
 animations {
-# enabled = yes
-# bezier=overshot,0.13,0.99,0.29,1.1
-# animation=border,1,10,default
-# animation=fade,1,10,default
-# animation=windows,1,4,overshot,slide
-# animation=workspaces,1,6,overshot,slide
+    bezier = easeOutQuint  ,0.23 ,1    ,0.32  ,1
+    bezier = easeInOutCubic,0.65 ,0.05 ,0.36  ,1
+    bezier = linear        ,0    ,0    ,1     ,1
+    bezier = almostLinear  ,0.5  ,0.5  ,0.75  ,1.0
+    bezier = quick         ,0.15 ,0    ,0.1   ,1
 
-bezier = easeOutQuint  ,0.23 ,1    ,0.32  ,1
-bezier = easeInOutCubic,0.65 ,0.05 ,0.36  ,1
-bezier = linear        ,0    ,0    ,1     ,1
-bezier = almostLinear  ,0.5  ,0.5  ,0.75  ,1.0
-bezier = quick         ,0.15 ,0    ,0.1   ,1
+    bezier = fast          , 0   , 0.99, 0    , 0.99
+    bezier = smooth        , 0.1 , 0.99, 0.29 , 1.1
+    bezier = overshot      , 0.05,0.9  ,0.1   ,1.1
 
-bezier = fast          , 0   , 0.99, 0    , 0.99
-bezier = smooth        , 0.1 , 0.99, 0.29 , 1.1
-bezier = overshot      , 0.05,0.9  ,0.1   ,1.1
-
-animation = global         , 1 , 10  , default
-animation = border         , 1 , 5.39, easeOutQuint
-animation = windows        , 1 , 4.79, easeOutQuint
-animation = windowsIn      , 1 , 4.1 , easeOutQuint, popin 87%
-animation = windowsOut     , 1 , 1.49, linear      , popin 87%
-animation = fadeIn         , 1 , 1.73, almostLinear
-animation = fadeOut        , 1 , 1.46, almostLinear
-animation = fade           , 1 , 3.03, quick
-animation = layers         , 1 , 3.81, easeOutQuint
-animation = layersIn       , 1 , 4   , easeOutQuint, fade
-animation = layersOut      , 1 , 1.5 , linear      , fade
-animation = fadeLayersIn   , 1 , 1.79, almostLinear
-animation = fadeLayersOut  , 1 , 1.39, almostLinear
-animation = workspaces     , 1 , 5   , overshot    , slide
-# animation = workspaces   , 1 , 1.94, almostLinear, fade
-# animation = workspacesIn , 1 , 1.21, almostLinear, fade
-# animation = workspacesOut, 1 , 1.94, almostLinear, fade
+    animation = global         , 1 , 10  , default
+    # animation = border         , 1 , 5.39, easeOutQuint
+    animation = windows        , 1 , 4.79, easeOutQuint
+    animation = windowsIn      , 1 , 4.1 , easeOutQuint, popin 87%
+    animation = windowsOut     , 1 , 1.49, linear      , popin 87%
+    animation = fadeIn         , 1 , 1.73, almostLinear
+    animation = fadeOut        , 1 , 1.46, almostLinear
+    animation = fade           , 1 , 3.03, quick
+    animation = layers         , 1 , 3.81, easeOutQuint
+    animation = layersIn       , 1 , 4   , easeOutQuint, fade
+    animation = layersOut      , 1 , 1.5 , linear      , fade
+    animation = fadeLayersIn   , 1 , 1.79, almostLinear
+    animation = fadeLayersOut  , 1 , 1.39, almostLinear
+    animation = workspaces     , 1 , 5   , overshot    , slide
+    # animation = workspaces   , 1 , 1.94, almostLinear, fade
+    # animation = workspacesIn , 1 , 1.21, almostLinear, fade
+    # animation = workspacesOut, 1 , 1.94, almostLinear, fade
 }
 
 dwindle {
