[UP] hyprland config
- delete attribute with default value
- opaque on by default
- new blur settup
- move comments out of tangle block

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -70,7 +70,6 @@ general {
     }
 }
 
-# Make the cursor disappear after 3 seconds
 cursor {
   inactive_timeout = 3
   enable_hyprcursor = true
@@ -93,17 +92,14 @@ decoration {
     fullscreen_opacity=0.9
     blur {
         enabled = true
-        size = 5 # minimum 1
-        passes = 2 # minimum 1, more passes = more resource intensive.
-        ignore_opacity = false
+        size = 1 # minimum 1
+        passes = 3 # minimum 1, more passes = more resource intensive.
     }
     shadow {
-        #drop_shadow = yes
-        enabled = true
+        enabled = false
         range = 8
         offset = 1 2
         scale = 0.97
-        render_power = 3
         color = rgba(1E202966)
         color_inactive = 0x50000000
     }
@@ -241,8 +237,9 @@ windowrule = workspace 1,^(WebCord)$
 windowrule = workspace 1,^(Slack)$
 
 # All
-windowrule = opacity 1 override 0.90 override, .*
-windowrule = opacity 0.90 override 0.90 override, ^(emacs|kitty|Alacritty)$
+windowrule = opacity 0.9 override 0.9 override, .*
+windowrule = opaque on, .*
+windowrule = opaque off, ^(emacs|kitty|Alacritty)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
