[UP] setup hyprcursor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,6 +41,8 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
 exec-once = ~/.config/hypr/scripts/gtkthemes-bkp
 
+exec-once = hyprctl setcursor Qogir-dark 24 #19
+
 input {
     kb_layout = fr
     # kb_variant =
@@ -392,8 +394,6 @@ bind = $mainMod CTRL, mouse_up, workspace, +1
 bind = $mainMod CTRL, mouse_down, workspace, -1
 
 bind = SUPER, V, exec, $clipboardlist
-
-env = HYPRCURSOR_SIZE,19
 
 env = GDK_BACKEND=wayland,x11
 env = QT_QPA_PLATFORM="wayland;xcb"
