[ADD] window rules for zen Picture-In-Picture

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -209,7 +209,10 @@ windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 windowrule = workspace 3,brave-browser
 windowrule = workspace 3,zen-alpha
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
+windowrulev2 = float,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+windowrulev2 = size 740 440,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
+windowrulev2 = move onscreen 100%-w-10,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
 windowrulev2 = float,class:^brave-.*-Default$
 
