[UP] rename bin

--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -3,6 +3,6 @@
 # exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 
 exec-once=webcord
-exec-once=emacs_start
+exec-once=start_emacs
 exec-once=communication_app_start
 exec-once=zen-browser
