--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # monitor = eDP-1, 1920x1080@60, 0x0,1
 monitor = eDP-1, 2880x1800@60, 0x0,1.5
-workspace = eDP-1, 1
+workspace = 1, monitor:eDP-1
 
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
 monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5
@@ -12,7 +12,7 @@ monitor = desc:Iiyama North America PL2390 11298JH100788, preferred, -1920x0, 1
 monitor = ,1920x1080@60, 1920x0, 1
 # monitor = ,preferred, auto, 1
 # monitor = ,preferred, auto, 1, mirror, eDP-1 # Mirror
-workspace = HDMI-A-1, 2
+workspace = 2, monitor:HDMI-A-1
 
 exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
