[UP] set scroll factor less than 1

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,6 +53,7 @@ input {
     numlock_by_default = 1
     touchpad {
         natural_scroll = no
+        scroll_factor = 0.8
     }
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
