[UP] zen rename initial class

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -207,13 +207,13 @@ windowrulev2=center,class:^(org.gnome.Settings)$
 windowrulev2=size 1280 720,class:^(org.gnome.Settings)$
 
 # Browser
-windowrule = workspace 3,brave-browser
-windowrule = workspace 3,zen-alpha
+windowrule = workspace 2,brave-browser
+windowrule = workspace 2,zen
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
-windowrulev2 = float,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
-windowrulev2 = size 740 440,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(zen)$,title:^(Picture-in-Picture)$
+windowrulev2 = size 740 440,class:^(zen)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
-windowrulev2 = move onscreen 100%-w-10,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+windowrulev2 = move onscreen 100%-w-10,class:^(zen)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
 windowrulev2 = float,class:^brave-.*-Default$
 
