[UP] fix custom opaque behavior with new regex system

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -242,9 +242,9 @@ windowrule = workspace 1,^(WebCord)$
 windowrule = workspace 1,^(Slack)$
 
 # All
-windowrule = opacity 0.9 override 0.9 override, .*
-windowrule = opaque on, .*
-windowrule = opaque off, ^(emacs|kitty|Alacritty)$
+windowrule = opacity 0.9 override 0.9 override, ^(.*)$
+windowrule = opaque 1, ^(.*)$
+windowrule = opaque 0, ^(emacs|kitty|Alacritty)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
