--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -86,3 +86,14 @@ image {
     halign = center
     valign = center
 }
+
+animations {
+    enabled = true
+    bezier = linear, 1, 1, 0, 0
+    animation = fadeIn, 1, 5, linear
+    animation = fadeOut, 1, 5, linear
+}
+
+auth {
+   fingerprint:enabled = true
+}
