[UP] use ghostty as second terminal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -43,6 +43,8 @@ exec-once = ~/.config/hypr/scripts/gtkthemes-bkp
 
 exec-once = hyprctl setcursor Qogir-dark 24 #19
 
+exec-once = ghostty --gtk-single-instance=true --quit-after-last-window-closed=false --initial-window=false
+
 input {
     kb_layout = fr
     # kb_variant =
@@ -244,13 +246,13 @@ windowrule = workspace 1,^(Slack)$
 # All
 windowrule = opacity 0.9 override 0.9 override, ^(.*)$
 windowrule = opaque 1, ^(.*)$
-windowrule = opaque 0, ^(emacs|kitty|Alacritty)$
+windowrule = opaque 0, ^(emacs|kitty|Alacritty|com.mitchellh.ghostty)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 $term = kitty
-$term2 = alacritty
+$term2 = ghostty --gtk-single-instance=true
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
 $appmenu = ~/.config/rofi/appmenu.sh
