[UP] do some cleaning

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -164,8 +164,6 @@ misc {
 }
 
 # Float Necessary Windows
-windowrule = float,Wofi
-windowrule = float,rofi
 windowrule = float,waypaper
 windowrule = float,pavucontrol
 windowrule = float,foot-float
@@ -184,22 +182,13 @@ windowrulev2 = float,class:^(org.kde.gwenview)$
 windowrulev2 = float,class:^kitty$ title:^(float-.*)$
 windowrulev2 = size 50% 50%,class:^kitty$ title:^(float-.*)$
 
-# Tuple
-windowrule = float,Tuple
-windowrule = workspace 4,Tuple
-
 # Pop
 windowrule = workspace 4,Pop
 
-# Dolphin
-windowrule = float,^(org.kde.dolphin)$
-windowrulev2 = size 1280 720,class:^(org.kde.dolphin)$
-windowrulev2 = center, class:^(org.kde.dolphin)$
-
-# Thunar
-windowrule = float,^(thunar)$
-windowrulev2 = size 1280 720,class:^(thunar)$
-windowrulev2 = center, class:^(thunar)$
+# File Managers
+windowrule = float,^(org.kde.dolphin|thunar)$
+windowrulev2 = size 1280 720,class:^(org.kde.dolphin|thunar)$
+windowrulev2 = center, class:^(org.kde.dolphin|thunar)$
 
 # Gnome Settings
 windowrule=float,^(org.gnome.Settings)$
@@ -217,9 +206,6 @@ windowrulev2 = move onscreen 100%-w-10,class:^(zen)$,title:^(Picture-in-Picture)
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
 windowrulev2 = float,class:^brave-.*-Default$
 
-# Rofi
-windowrule = float,Rofi
-
 # XwaylandBridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
@@ -235,8 +221,7 @@ windowrule = workspace 1,^(.*Microsoft Teams.*)$
 windowrule = workspace 1,^(teams-for-linux)$
 
 # Discord
-windowrule = workspace 1,^(discord)$
-windowrule = workspace 1,^(WebCord)$
+windowrule = workspace 1,^(discord|WebCord)$
 
 # Slack
 windowrule = workspace 1,^(Slack)$
@@ -249,8 +234,8 @@ windowrule = opaque 0, ^(emacs|kitty|Alacritty|com.mitchellh.ghostty)$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-$term = kitty
-$term2 = ghostty --gtk-single-instance=true
+$term = ghostty --gtk-single-instance=true
+$term2 = kitty
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
 $appmenu = ~/.config/rofi/appmenu.sh
@@ -273,28 +258,28 @@ $browser = brave
 $help_keybind = ~/.config/rofi/keybinding.sh
 
 bind = $mainMod, Return, exec, $term
-bind = $mainMod SHIFT, Return, exec,$term2
-bind = $mainMod CTRL, Return, exec, [float; size 50% 60%] $term
+bind = $mainMod SHIFT, Return, exec, $term2
+bind = $mainMod CTRL, Return, exec, [float; size 50% 60%] $term2
 
-bind = $mainMod, E ,exec,$files
-bind = $mainMod SHIFT, E ,exec,$editor
-bind = $mainMod SHIFT, I ,exec,$editor-everywhere
-bind = $mainMod SHIFT, W ,exec,$browser
+bind = $mainMod, E, exec,$files
+bind = $mainMod SHIFT, E, exec,$editor
+bind = $mainMod SHIFT, I, exec,$editor-everywhere
+bind = $mainMod SHIFT, W, exec,$browser
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
 bind = $mainMod CTRL, S, exec,XDG_CURRENT_DESKTOP="gnome" gnome-control-center
 
-bind = $mainMod, D, exec,$appmenu
-bind = $mainMod, X, exec,$powermenu
-bind = $mainMod, W, exec,$wallpapermenu
-bind = $mainMod, T, exec,$thememenu
+bind = $mainMod, D, exec, $appmenu
+bind = $mainMod, X, exec, $powermenu
+bind = $mainMod, W, exec, $wallpapermenu
+bind = $mainMod, T, exec, $thememenu
 bind = $mainMod SHIFT, Comma, exec, pkill rofi || $help_keybind
 
-bind = $mainMod, N, exec,nm-connection-editor
-bind = $mainMod, C, exec,$colorpicker
+bind = $mainMod, N, exec, nm-connection-editor
+bind = $mainMod, C, exec, $colorpicker
 bind = CTRL ALT,L, exec, $suspend
 
-bindm = SUPER,mouse:272,movewindow
-bindm = SUPER,mouse:273,resizewindow
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, mouse:273, resizewindow
 
 binde = ,XF86MonBrightnessUp, exec, $brightness --inc
 binde = ,XF86MonBrightnessDown, exec, $brightness --dec
