--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -91,7 +91,8 @@ group {
 }
 
 decoration {
-    rounding = 2       # Original: 10
+    rounding = 12         # original 10
+    rounding_power = 4.0  # original 2.0
     blur {
         enabled = true
         size = 3 # minimum 1
