[ADD] keybind to toggle compact mode

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -314,6 +314,7 @@ bind = $mainMod, P, pseudo,
 bind = $mainMod, O, exec, hyprctl dispatch setprop active opaque toggle
 bind = $mainMod CTRL, Space, pin
 bind = $mainMod, G, togglegroup
+bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/compactmode.sh
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
