--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -296,7 +296,7 @@ bind = SHIFT, Print, exec, $screenshot --in10
 bind = $mainMod, Print, exec, $screenshot --win
 bind = $mainMod CTRL, Print, exec, $screenshot --area
 
-bind = $mainMod SHIFT CTRL, S, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+bind = $mainMod SHIFT, T, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
 
