--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,5 +3,5 @@ window-decoration = false
 font-family = JetBrainsMonoNerdFont
 font-size   = 11.0
 
-command = cat ~/.cache/wal/sequences & zsh
+theme = ~/.cache/wal/ghostty.conf
 keybind = ctrl+shift+f=write_screen_file:open
