[UP] status_bar script + add monitor config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ workspace = 1, monitor:eDP-1
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
 monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5
 monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
+monitor = desc:LG Electronics LG TV SSCR2 0x01010101, preferred, 1920x0, 1.5
 
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, 1920x0, 1
 monitor = desc:Iiyama North America PL2390 11298JH100788, preferred, -1920x0, 1
@@ -20,7 +21,7 @@ exec-once = hyprpaper
 
 exec = ~/.config/hypr/scripts/notifications
 
-exec-once = ~/.config/hypr/scripts/statusbar
+exec-once = ~/.config/hypr/scripts/status_bar
 
 source = ~/.config/hypr/exec.conf
 
