--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,3 +5,4 @@ font-size   = 11.0
 
 theme = /home/croy/.cache/wal/ghostty.conf
 keybind = ctrl+shift+f=write_screen_file:open
+keybind = ctrl+,=unbind
