--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -313,6 +313,7 @@ bind = $mainMod, O, exec, hyprctl dispatch setprop active opaque toggle
 bind = $mainMod CTRL, Space, pin
 bind = $mainMod, G, togglegroup
 bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/compactmode.sh
+bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
