[UP] disable anim on selection layer

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -230,6 +230,8 @@ windowrule = opacity 0.9 override 0.9 override, ^(.*)$
 windowrule = opaque 1, ^(.*)$
 windowrule = opaque 0, ^(emacs|kitty|Alacritty|com.mitchellh.ghostty)$
 
+layerrule = noanim, selection
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
