--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,7 @@
 window-decoration = false
 
-font-family = JetBrainsMonoNerdFont
-font-size   = 11.0
+font-family = IosevkaNerdFont
+font-size   = 12.0
 
 theme = /home/croy/.cache/wal/ghostty.conf
 keybind = ctrl+shift+f=write_screen_file:open
