--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family      JetBrainsMonoNerdFont
+font_family      IosevkaNerdFont
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
