--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/hypr/hyprlock.png
+    path = ~/.cache/hyprpaper/current-wallpaper
     blur_passes = 2
     contrast = 0.8916
     brightness = 0.8172
