[UP] add window class to float

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -181,9 +181,9 @@ windowrule = size 50% 50%,class:^kitty$ title:^(float-.*)$
 windowrule = workspace 4,class:^Pop$
 
 # File Managers
-windowrule = float,class:^(org.kde.dolphin|thunar)$
-windowrule = center, class:^(org.kde.dolphin|thunar)$
-windowrule = size 1280 720,class:^(org.kde.dolphin|thunar)$
+windowrule = float,class:^(org.kde.dolphin|thunar|org.freedesktop.impl.portal.desktop.kde)$
+windowrule = center, class:^(org.kde.dolphin|thunar|org.freedesktop.impl.portal.desktop.kde)$
+windowrule = size 1280 720,class:^(org.kde.dolphin|thunar|org.freedesktop.impl.portal.desktop.kde)$
 
 # Gnome Settings
 windowrule = float,class:^(org.gnome.Settings)$
