[UP] reuse swaync + update config

--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -2,6 +2,7 @@
 # exec-once=~/.config/hypr/scripts/gtkthemes-bkp
 # exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 
+exec-once=swaync
 exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec-once=start_emacs
 exec-once=communication_app_start
