--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
-font_family      IosevkaNerdFont
+font_family      IosevkaTerm
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 11.0
+font_size 12.0
 
 include ~/.cache/wal/colors-kitty.conf
 map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i --tac
