[UP] reuse swaync as notification menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -232,6 +232,7 @@ $appmenu = ~/.config/rofi/appmenu.sh
 $clipboardlist = ~/.config/rofi/clipboardlist.sh
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
+$notificationmenu = swaync-client -t
 $brightness = ~/.config/hypr/scripts/brightness
 $screenshot = ~/.config/hypr/scripts/screenshot
 $lockscreen = hyprlock
@@ -376,6 +377,8 @@ bind = $mainMod SHIFT, mouse_up,  exec,hyprctl -q keyword cursor:zoom_factor $(h
 binde = $mainMod,       equal, exec,hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | awk '/^float.*/ {print $2 + 0.5}')
 binde = $mainMod SHIFT, minus, exec,hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | awk '/^float.*/ {print $2 - 0.5}')
 bind = $mainMod SHIFT,  equal,  exec,hyprctl -q keyword cursor:zoom_factor 1
+
+bind = $mainMod, N, exec, $notificationmenu
 
 env = GDK_BACKEND=wayland,x11
 env = QT_QPA_PLATFORM="wayland;xcb"
