--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,12 +1,13 @@
 [Settings]
-gtk-theme-name=Adwaita
-gtk-icon-theme-name=Papirus
-gtk-font-name=Noto Sans 10
-gtk-cursor-theme-name=Qogir-dark
+gtk-application-prefer-dark-theme=true
+gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=breeze-dark
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
-gtk-xft-dpi=147456
+gtk-theme-name=Adwaita
+gtk-xft-dpi=167116
