--- a/.config/systemd/user/kanata.service
+++ b/.config/systemd/user/kanata.service
@@ -14,6 +14,7 @@ Environment=PATH=/usr/local/bin:/usr/local/sbin:/usr/bin:/bin
 # IOSchedulingClass=realtime
 # Nice=-20
 Type=simple
+ExecStartPre=/sbin/modprobe uinput
 ExecStart=/usr/bin/sh -c 'exec /usr/bin/kanata --cfg $${HOME}/.config/kanata/config.kbd'
 Restart=no
 
