--- a/.config/waybar/config_hyprland.jsonc
+++ b/.config/waybar/config_hyprland.jsonc
@@ -10,17 +10,16 @@
   "spacing": 7, // Gaps between modules (4px)
   "modules-left": [
     "group/quicklinks-left",
-    "wlr/taskbar",
-    "network",
-    "hyprland/window"
+    "hyprland/workspaces",
+    "wlr/taskbar"
   ],
-  "modules-center": ["hyprland/workspaces"],
+  "modules-center": ["clock"],
   "modules-right": [
     "mpd",
     "group/info",
     "group/hardware",
     "custom/keyboard",
-    "clock",
+    "network",
     "group/quicklinks-right"
   ],
 
