[UP] blur and opacity rules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -97,7 +97,7 @@ decoration {
     blur {
         enabled = true
         size = 3 # minimum 1
-        passes = 1 # minimum 1, more passes = more resource intensive.
+        passes = 3 # minimum 1, more passes = more resource intensive.
     }
     shadow {
         enabled = false
@@ -213,9 +213,9 @@ windowrule = workspace 1,class:^(discord|WebCord)$
 windowrule = workspace 1,class:^(Slack)$
 
 # All
-windowrule = opacity 0.94 override 0.94 override,class:^(.*)$
+windowrule = opacity 0.90 override 0.90 override,class:^(.*)$
 windowrule = opaque 1,class:^(.*)$
-windowrule = opaque 0,class:^(emacs|kitty|Alacritty|com.mitchellh.ghostty)$
+windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
 
 layerrule = noanim, selection
 layerrule = noanim, hyprpicker
