[UP] hyprland config + some fancyness

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -65,13 +65,14 @@ general {
     gaps_in = 12
     gaps_out = 20
     border_size = 2
-    layout = dwindle
-    col.active_border = $color4
+    layout = master
+    col.active_border = $color4 $color6 60deg
     col.inactive_border = $color8
     allow_tearing = false
     snap {
         enabled = true
     }
+    resize_on_border = true
 }
 
 cursor {
@@ -137,8 +138,8 @@ animations {
 }
 
 dwindle {
-    pseudotile = yes # enable pseudotiling on dwindle
-    preserve_split = yes
+    pseudotile = true # enable pseudotiling on dwindle
+    preserve_split = true
     smart_split = false
 }
 
@@ -166,12 +167,13 @@ windowrule = float,class:^org.pulseaudio.pavucontrol$
 windowrule = float,class:^foot-float$
 windowrule = float,class:^nm-connection-editor$
 windowrule = float,class:^Gimp$
+windowrule = float,class:^blueman-manager$
+windowrule = float,class:^org.twosheds.iwgtk$
+windowrule = float,class:^blueberry.py$
+windowrule = float,class:^xdg-desktop-portal-gtk$
 
-windowrule = float,class:^(blueman-manager)$
-windowrule = float,class:^(org.twosheds.iwgtk)$
-windowrule = float,class:^(blueberry.py)$
-windowrule = float,class:^(xdg-desktop-portal-gtk)$
-windowrule = float,class:^(org.kde.gwenview)$
+windowrule = float,class:^org.kde.gwenview$
+windowrule = size 65% 65%,class:^org.kde.gwenview$
 
 windowrule = float,class:^kitty$ title:^(float-.*)$
 windowrule = size 50% 50%,class:^kitty$ title:^(float-.*)$
@@ -240,7 +242,7 @@ $sleep = ~/.config/hypr/scripts/sleep
 $suspend = ~/.config/hypr/scripts/suspend
 $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
-$files = thunar
+$files = dolphin
 $editor = emacsclient -c -n -a 'emacs'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = zen
@@ -385,5 +387,8 @@ env = QT_QPA_PLATFORM="wayland;xcb"
 env = XDG_CURRENT_DESKTOP=Hyprland
 env = XDG_SESSION_TYPE=wayland
 env = XDG_SESSION_DESKTOP=Hyprland
+env = XDG_MENU_PREFIX,arch-
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+env = XDG_MENU_PREFIX,arch-
