--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -144,7 +144,6 @@ dwindle {
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_on_top = false
 }
 
@@ -285,6 +284,8 @@ bind = CTRL, Print, exec, $screenshot --in5
 bind = SHIFT, Print, exec, $screenshot --in10
 bind = $mainMod, Print, exec, $screenshot --win
 bind = $mainMod CTRL, Print, exec, $screenshot --area
+
+bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/screen-capture.sh
 
 bind = $mainMod SHIFT, T, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
