[UP] set clickfinger_behavior to 1

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,6 +55,7 @@ input {
     touchpad {
         natural_scroll = no
         scroll_factor = 0.8
+        clickfinger_behavior = 1
     }
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
