[UP] new border deg

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -67,7 +67,7 @@ general {
     gaps_out = 20
     border_size = 2
     layout = master
-    col.active_border = $color4 $color6 60deg
+    col.active_border = $color4 $color6 45deg
     col.inactive_border = $color8
     allow_tearing = false
     snap {
@@ -82,8 +82,9 @@ cursor {
 }
 
 group {
-    col.border_active = $color4
-    col.border_inactive = $color0
+    col.border_active = $color4 $color6 45deg
+    col.border_inactive = $color8
+
     groupbar {
        render_titles = false
        gradients = true
