--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -228,6 +228,7 @@ layerrule = dimaround, rofi
 $mainMod = SUPER
 
 $term = ghostty --gtk-single-instance=true
+$termapp = $term -e
 $term2 = kitty
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
@@ -257,6 +258,8 @@ bind = $mainMod, E, exec, $files
 bind = $mainMod SHIFT, E, exec, $editor
 bind = $mainMod SHIFT, I, exec, $editor-everywhere
 bind = $mainMod SHIFT, W, exec, $browser
+bind = $mainMod, ccedilla, exec, $termapp k9s
+bind = $mainMod, m, exec, $termapp btop
 
 bind = $mainMod, D, exec, $appmenu
 bind = $mainMod, X, exec, $powermenu
